--- a/BcellEpitope.ipynb
+++ b/BcellEpitope.ipynb
@@ -20,8 +20,23 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/Shuvam1024/BcellEpitope/blob/main/BcellEpitope.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/Shuvam1024/shuvam1024-BcellEpitope/blob/main/BcellEpitope.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Author: Shuvam Mukherjee\n",
+        "\n",
+        "Date created: 01/4/2021\n",
+        "\n",
+        "Last modified: 8/28/2022\n",
+        "\n",
+        "Description: description here"
+      ],
+      "metadata": {
+        "id": "J5ajWrRRQrom"
+      }
     },
     {
       "cell_type": "code",
@@ -46,7 +61,7 @@
         "# For the latest nightly build:\n",
         "# !pip install tf-nightly"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -88,7 +103,7 @@
         "# The following line improves formatting when ouputting NumPy arrays.\n",
         "# np.set_printoptions(linewidth = 200)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -104,7 +119,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/gdrive', force_remount=True)\n"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -136,7 +151,7 @@
         "\n",
         "#data_df_num.corr()\n"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -428,7 +443,7 @@
         "# Examine correlations\n",
         "data_df.corr()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -862,7 +877,7 @@
         "data_df = add_normalized_features(data_df)\n",
         "data_df.describe()\n"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1275,7 +1290,7 @@
         "\n",
         "train_df, test_df = train_test_split(data_df, 0.7)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1306,7 +1321,7 @@
         "  my_feature_layer = layers.DenseFeatures(feature_columns)\n",
         "  return my_feature_layer\n"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1337,7 +1352,7 @@
         "\n",
         "print(\"Defined the plot_curve function.\")"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1426,7 +1441,7 @@
         "\n",
         "print(\"Defined the create_model and train_model functions.\") "
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1487,7 +1502,7 @@
         "plot_curve(epochs, hist, list_of_metrics_to_plot)\n",
         "\n"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2348,7 +2363,7 @@
         "\n",
         "my_model.evaluate(x = features, y = label, batch_size=batch_size)"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
